--- a/sketch/demos/index.html
+++ b/sketch/demos/index.html
@@ -13,4 +13,14 @@ limitations under the License.
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+  <link rel="stylesheet" href="./style.css">
+  <title>MagentaSketch.js demos</title>
+</head>
+<body>
+    <h1>MagentaSketch.js demos</h1>
+    <section>
+      <h3>
+        <ul>
+          <li><a href="simple.html">Gen
