--- a/sketch/demos/index.html
+++ b/sketch/demos/index.html
@@ -25,4 +25,10 @@ limitations under the License.
         <ul>
           <li><a href="simple.html">Generation</a> - generates a bird using the model.</li>
           <li><a href="predict.html">Prediction</a> - finish a drawing given a starting set of strokes.</li>
-          <li><a href="interactive_predict.html">Interactive Prediction</a> - Same as the previous demo, but made to be interactive so the user can draw the be
+          <li><a href="interactive_predict.html">Interactive Prediction</a> - Same as the previous demo, but made to be interactive so the user can draw the beginning of a sketch on the canvas.</li>
+        </ul>
+      </h3>
+    </section>
+</body>
+</html>
+
