--- a/sketch/demos/simple.html
+++ b/sketch/demos/simple.html
@@ -14,4 +14,13 @@ limitations under the License.
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+    <link rel="stylesheet" href="./style.css">
+    <title>Sketch Generation</title>
+  </head>
+  <body>
+    <h1>Sketch Generation</h1>
+    <p>This demo loads the <code>bird</code> SketchRNN model and generates bird sketches.
+    <div id="sketch"></div>
+  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"
