--- a/sketch/demos/simple.html
+++ b/sketch/demos/simple.html
@@ -23,4 +23,6 @@ limitations under the License.
     <p>This demo loads the <code>bird</code> SketchRNN model and generates bird sketches.
     <div id="sketch"></div>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+  <script src="simple_bundle.js"></script>
+</html>
